Working JavaFX login screen